--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,9 @@
 
             "rules": {
                 "@typescript-eslint/no-unused-vars": "off",
-                "@typescript-eslint/no-explicit-any": "off"
+                "@typescript-eslint/no-explicit-any": "off",
+                "no-unused-vars": "off",
+                "no-console": "off"
             }
         }
     ],
