migration: update TypeScript settings, improve component structure, and enhance loading states

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "es6"
+      "es6",
+      "es2017",
+      "es2018"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -32,11 +34,13 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-
-
+    "exactOptionalPropertyTypes": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx"
   ],
   "exclude": [
     "node_modules",
