--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
@@ -55,16 +55,19 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "babel-plugin-named-exports-order": "0.0.2",
+    "craco-alias": "^3.0.1",
     "eslint": "^8.23.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-testing-library": "^5.6.0",
     "prop-types": "^15.8.1",
+    "typescript": "^5.8.3",
     "webpack": "^5.74.0"
   }
 }
