--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint": "^8.23.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-testing-library": "^5.6.0",
     "prop-types": "^15.8.1",
     "typescript": "^4.9.5",
