--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,29 +7,47 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:jsx-a11y/recommended"
+        "plugin:jsx-a11y/recommended",
+        "plugin:storybook/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "settings": {
-        "react":{
-            "version":"detect"
+        "react": {
+            "version": "detect"
         }
     },
     "overrides": [
         {
-            "files":["**/*.test.js","**/*.test.jsx","**/*.test.ts","**/*.test.tsx"],
-            "env":{
-                "jest":true
+            "files": [
+                "**/*.test.js",
+                "**/*.test.jsx",
+                "**/*.test.ts",
+                "**/*.test.tsx"
+            ],
+            "env": {
+                "jest": true
             }
         },
         {
-            "files": ["**/*.ts", "**/*.tsx"],
-
+            "files": [
+                "**/*.ts",
+                "**/*.tsx"
+            ],
             "rules": {
                 "@typescript-eslint/no-unused-vars": "off",
                 "@typescript-eslint/no-explicit-any": "off",
                 "no-unused-vars": "off",
                 "no-console": "off"
+            }
+        },
+        {
+            "files": [
+                "**/*.stories.*"
+            ],
+            "rules": {
+                "import/no-anonymous-default-export": "off",
+                "react/react-in-jsx-scope": "off",
+                "react/no-unescaped-entities": "off"
             }
         }
     ],
