--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +58,12 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@storybook/addon-actions": "^9.0.8",
+    "@storybook/addon-docs": "^9.0.18",
+    "@storybook/addon-onboarding": "^9.0.18",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
+    "@storybook/preset-create-react-app": "^9.0.18",
+    "@storybook/react-webpack5": "^9.0.18",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/react": "^18.2.0",
@@ -66,8 +74,10 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^9.0.18",
     "eslint-plugin-testing-library": "^5.6.0",
     "prop-types": "^15.8.1",
+    "storybook": "^9.0.18",
     "typescript": "^4.9.5",
     "webpack": "^5.74.0"
   }
