--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "test:watch": "craco test --watch",
+    "test:coverage": "craco test --coverage --watchAll=false",
+    "test:ci": "craco test --coverage --watchAll=false --ci",
+    "test:debug": "craco test --inspect-brk --runInBand --no-cache",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
@@ -30,6 +34,7 @@
     "format-check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "quality": "npm run type-check && npm run lint && npm run format-check",
     "quality-fix": "npm run type-check && npm run lint-fix && npm run format",
+    "quality-full": "npm run type-check && npm run lint && npm run format-check && npm run test:ci",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
