chore: type safety

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -101,7 +101,11 @@
           }
         ],
         "pathGroupsExcludedImportTypes": ["builtin"],
-        "newlines-between": "never"
+        "newlines-between": "never",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
       }
     ],
 
