--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
     "noImplicitOverride": true,
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
-    "noPropertyAccessFromIndexSignature": true
+    "noPropertyAccessFromIndexSignature": true,
+    "useUnknownInCatchVariables": true
   },
   "include": [
     "src/**/*.ts",
