--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "rsuite": "^5.19.0",
     "rxjs": "^7.5.7",
@@ -19,14 +18,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "test:watch": "craco test --watch",
-    "test:coverage": "craco test --coverage --watchAll=false",
-    "test:ci": "craco test --coverage --watchAll=false --ci",
-    "test:debug": "craco test --inspect-brk --runInBand --no-cache",
-    "eject": "react-scripts eject",
+    "start": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --watchAll=false",
+    "test:ci": "jest --coverage --watchAll=false --ci",
+    "test:debug": "jest --inspect-brk --runInBand --no-cache",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "type-check": "tsc --noEmit",
@@ -37,22 +36,6 @@
     "quality-full": "npm run type-check && npm run lint && npm run format-check && npm run test:ci",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
   },
   "browserslist": {
     "production": [
@@ -67,38 +50,38 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
+    "@rsbuild/core": "^1.4.11",
+    "@rsbuild/plugin-less": "^1.3.1",
+    "@rsbuild/plugin-react": "^1.3.4",
+    "@rsbuild/plugin-sass": "^1.3.3",
+    "@rsbuild/plugin-svgr": "^1.2.1",
+    "@rsbuild/plugin-type-check": "^1.2.3",
     "@storybook/addon-actions": "^9.0.8",
     "@storybook/addon-docs": "^9.0.18",
     "@storybook/addon-onboarding": "^9.0.18",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
-    "@storybook/preset-create-react-app": "^9.0.18",
-    "@storybook/react-webpack5": "^9.0.18",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
-    "babel-plugin-named-exports-order": "0.0.2",
-    "craco-alias": "^3.0.1",
     "eslint": "^8.23.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^3.10.1",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.0.18",
     "eslint-plugin-testing-library": "^5.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "jest-transform-css": "^6.0.3",
+    "jest-transform-file": "^1.1.1",
+    "jest-watch-typeahead": "^3.0.1",
     "msw": "^2.10.4",
     "prettier": "^3.6.2",
-    "prop-types": "^15.8.1",
     "storybook": "^9.0.18",
-    "typescript": "^4.9.5",
-    "webpack": "^5.74.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.36.0"
   }
 }
