--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "pokedex",
+  "name": "pokedex-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@rsuite/icons": "^1.3.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -21,21 +18,13 @@
     "start": "rsbuild dev",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --watchAll=false",
-    "test:ci": "jest --coverage --watchAll=false --ci",
-    "test:debug": "jest --inspect-brk --runInBand --no-cache",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "format-check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "quality": "npm run type-check && npm run lint && npm run format-check",
-    "quality-fix": "npm run type-check && npm run lint-fix && npm run format",
-    "quality-full": "npm run type-check && npm run lint && npm run format-check && npm run test:ci",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "quality-fix": "npm run type-check && npm run lint-fix && npm run format"
   },
   "browserslist": {
     "production": [
@@ -56,10 +45,6 @@
     "@rsbuild/plugin-sass": "^1.3.3",
     "@rsbuild/plugin-svgr": "^1.2.1",
     "@rsbuild/plugin-type-check": "^1.2.3",
-    "@storybook/addon-actions": "^9.0.8",
-    "@storybook/addon-docs": "^9.0.18",
-    "@storybook/addon-onboarding": "^9.0.18",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -70,17 +55,7 @@
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-storybook": "^9.0.18",
-    "eslint-plugin-testing-library": "^5.6.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5",
-    "jest-transform-css": "^6.0.3",
-    "jest-transform-file": "^1.1.1",
-    "jest-watch-typeahead": "^3.0.1",
-    "msw": "^2.10.4",
     "prettier": "^3.6.2",
-    "storybook": "^9.0.18",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   }
