--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,14 +7,23 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
     "plugin:@typescript-eslint/recommended-type-checked",
-    "plugin:@typescript-eslint/stylistic-type-checked",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["@typescript-eslint", "react", "react-hooks", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "react",
+    "react-hooks",
+    "prettier",
+    "import"
+  ],
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "typescript": {}
     }
   },
   "parser": "@typescript-eslint/parser",
@@ -26,27 +35,38 @@
       "jsx": true
     }
   },
-  "ignorePatterns": ["build/**"],
+  "ignorePatterns": [
+    "build/**",
+    "dist/**",
+    "node_modules/**",
+    "rsbuild.config.ts"
+  ],
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-uses-react": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "@typescript-eslint/array-type": "warn",
     "@typescript-eslint/no-unused-vars": [
-      "error",
+      "warn",
       { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }
     ],
-    "@typescript-eslint/no-unsafe-return": "off",
-    "@typescript-eslint/no-unsafe-assignment": "off",
-    "@typescript-eslint/no-unsafe-argument": "off",
-    "@typescript-eslint/no-unsafe-member-access": "off",
-    "@typescript-eslint/no-unsafe-call": "off",
-    "@typescript-eslint/consistent-type-definitions": ["warn", "type"],
     "@typescript-eslint/no-floating-promises": "warn",
-    "@typescript-eslint/no-inferrable-types": "off",
-    "no-unused-vars": "off",
-    "no-prototype-builtins": "off",
-    "import/order": "off"
+    "@typescript-eslint/consistent-type-imports": "warn",
+    "import/order": [
+      "warn",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index",
+          "object",
+          "type"
+        ],
+        "newlines-between": "always",
+        "alphabetize": { "order": "asc", "caseInsensitive": true }
+      }
+    ],
+    "no-console": "warn"
   }
 }
