--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,13 +1,9 @@
 {
+  "plugins": ["@prettier/plugin-oxc"],
   "semi": true,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 80,
+  "printWidth": 100,
   "tabWidth": 2,
-  "useTabs": false,
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "endOfLine": "lf",
-  "bracketSameLine": false,
-  "quoteProps": "as-needed"
+  "arrowParens": "always"
 }
