--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@prettier/plugin-oxc": "0.0.4",
     "@rsbuild/core": "^1.4.11",
     "@rsbuild/plugin-less": "^1.3.1",
     "@rsbuild/plugin-react": "^1.3.4",
@@ -52,6 +53,8 @@
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
