--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prestart": "npm run quality-fix",
+    "prebuild": "rimraf build && npm run quality",
     "start": "rsbuild dev",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
@@ -59,6 +61,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   }
