--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+# pnpm
+/node_modules/.pnpm
+
 # testing
 /coverage
 
@@ -21,6 +24,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 *storybook.log
 storybook-static
