--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "start": "rsbuild dev",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint-fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint": "biome lint src/",
+    "lint-fix": "biome check --write src/",
     "type-check": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "format-check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format": "biome format --write src/",
+    "format-check": "biome format src/",
     "quality": "pnpm run type-check && pnpm run lint && pnpm run format-check",
     "quality-fix": "pnpm run type-check && pnpm run lint-fix && pnpm run format"
   },
@@ -38,7 +38,7 @@
     ]
   },
   "devDependencies": {
-    "@prettier/plugin-oxc": "0.0.4",
+    "@biomejs/biome": "^2.1.3",
     "@rsbuild/core": "^1.4.11",
     "@rsbuild/plugin-less": "^1.3.1",
     "@rsbuild/plugin-react": "^1.3.4",
@@ -48,18 +48,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.3",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "typescript": "^5.8.3"
   }
 }
