--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "format": "biome format --write src/",
     "format-check": "biome format src/",
     "quality": "pnpm run type-check && pnpm run lint && pnpm run format-check",
-    "quality-fix": "pnpm run type-check && pnpm run lint-fix && pnpm run format"
+    "quality-fix": "pnpm run type-check && pnpm run lint-fix && pnpm run format",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "browserslist": {
     "production": [
@@ -38,17 +40,20 @@
     ]
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.3",
-    "@rsbuild/core": "^1.4.15",
-    "@rsbuild/plugin-less": "^1.3.2",
-    "@rsbuild/plugin-react": "^1.3.5",
-    "@rsbuild/plugin-sass": "^1.3.5",
+    "@biomejs/biome": "^2.2.4",
+    "@rsbuild/core": "^1.5.12",
+    "@rsbuild/plugin-less": "^1.5.0",
+    "@rsbuild/plugin-react": "^1.4.1",
+    "@rsbuild/plugin-sass": "^1.4.0",
     "@rsbuild/plugin-svgr": "^1.2.2",
     "@rsbuild/plugin-type-check": "^1.2.4",
+    "@storybook/addon-docs": "^9.1.8",
     "@types/node": "^24.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "rimraf": "^6.0.1",
+    "storybook": "^9.1.8",
+    "storybook-react-rsbuild": "^2.1.2",
     "typescript": "^5.9.2"
   }
 }
