--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,9 +39,10 @@
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
     "noPropertyAccessFromIndexSignature": true,
-    "useUnknownInCatchVariables": true
+    "useUnknownInCatchVariables": true,
+    "allowImportingTsExtensions": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", ".storybook/"],
+  "include": ["src"],
   "exclude": [
     "node_modules",
     "build",
