test: intial setup and first pass

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "quality": "pnpm run type-check && pnpm run lint && pnpm run format-check",
     "quality-fix": "pnpm run type-check && pnpm run lint-fix && pnpm run format",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "rstest -c rstest.config.ts"
   },
   "browserslist": {
     "production": [
@@ -47,10 +48,15 @@
     "@rsbuild/plugin-sass": "^1.4.0",
     "@rsbuild/plugin-svgr": "^1.2.2",
     "@rsbuild/plugin-type-check": "^1.2.4",
+    "@rstest/core": "^0.5.0",
     "@storybook/addon-docs": "^9.1.8",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "jsdom": "^27.0.0",
     "rimraf": "^6.0.1",
     "storybook": "^9.1.8",
     "storybook-react-rsbuild": "^2.1.2",
